# PeaSyo

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  app.json  package.json  valid_hosts.txt  vcpkg.json
.github/: stale.yml
DS5-tester/: index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
DS5-tester/src/: App.vue
DS5-tester/src/components/: InfoPanel.vue  OutputPanel.vue  TriggerEffect.vue
DS5-tester/src/components/common/: GroupedButton.vue  SelfResettingSlider.vue
DS5-tester/src/locales/: en-US.json  zh-CN.json
DS5-tester/src/store/: dualsense.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/debug/java/com/greenlightrn/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/fsr/2.0/: opt_fsr.fxh  opt_fsr_easu.fxh  opt_fsr_fragment.glsl  passthrough_fragment.glsl
android/app/src/main/assets/fsr/3.0/: fsr_easu_fragment.glsl  opt_fsr_fragment.glsl
android/app/src/main/assets/fsr/3.1/: fsr_easu_fragment.glsl  opt_fsr_fragment.glsl
android/app/src/main/assets/web/: index.html
android/app/src/main/assets/web/assets/: index-BHrHS2qQ.js  index-CtsMOjNb.js  index-DafkVcfr.js  index-DmXYjYCZ.js  index-G5o7vVDE.css  index-RoL7xfNM.css  index-legacy-Bo_nrdjD.js  index-legacy-CVzO0DEt.js  index-legacy-MQeJ426S.js  index-legacy-rSdnVqyv.js  polyfills-legacy-m8lAdEGl.js
android/app/src/main/cpp/: audio-decoder.c  audio-decoder.h  audio-output.cpp  audio-output.h  chiaki-jni.c  chiaki-jni.h  controller.c  controller.h  video-decoder.c  video-decoder.h
android/app/src/main/cpp/haptic/: haptic_usb.cpp
android/app/src/main/java/com/peasyo/: BatteryModule.java  BatteryPackage.java  FullScreenManager.java  FullScreenPackage.java  GamepadManager.java  GamepadPackage.java  GamepadSensorModule.java  GamepadSensorPackage.java  HapticModule.java  HapticPackage.java  JoseStuff.java  LogsModule.java  LogsPackage.java  MainActivity.java  MainApplication.java  PipManager.java  PipPackage.java  SensorModule.java  SensorPackage.java  UsbRumbleManager.java  UsbRumblePackage.java  WifiPerformanceManager.java  WifiPerformanceModule.java  WifiPerformancePackage.java
android/app/src/main/java/com/peasyo/audio/: AudioRouteResolver.java
android/app/src/main/java/com/peasyo/input/: AbstractController.java  AbstractDualSenseController.java  AbstractXboxController.java  ControllerHandler.java  ControllerPacket.java  DSControllerPacket.java  DualSenseController.java  DualSenseHapticSender.java  HapticNative.java  RazerKishiController.java  RazerKishiHapticSender.java  UsbDriverListener.java  UsbDriverService.java  Xbox360Controller.java  Xbox360WirelessDongle.java  XboxOneController.java
android/app/src/main/java/com/peasyo/lib/: Chiaki.kt
android/app/src/main/java/com/peasyo/log/: LogManager.java
android/app/src/main/java/com/peasyo/registry/: ChiakiRxLog.kt  RegistryManager.java  RegistryPackage.java
android/app/src/main/java/com/peasyo/session/: Gamepad.java  HolepunchManager.java  HolepunchPackage.java  StreamSession.kt  log.txt
android/app/src/main/java/com/peasyo/stream/: Dpad.java  StreamFsrView.java  StreamFsrViewManager.java  StreamFsrViewPackage.java  StreamTextureView.java  StreamTextureViewManager.java  StreamTextureViewPackage.java  StreamView.java  StreamViewManager.java  StreamViewPackage.java
android/app/src/main/java/com/peasyo/touchcontrols/: AnalogStickPackage.java  AnalogStickView.java  AnalogStickViewManager.java  ButtonHaptics.java  ButtonView.java  ButtonViewManager.java  ButtonViewPackage.java  CustomView.java  TouchTracker.java  Vector.java
android/app/src/main/java/com/peasyo/utils/: OrientationTracker.java  Vector2d.java
android/app/src/main/res/drawable/: control_button_box.xml  control_button_cross.xml  control_button_home.xml  control_button_l1.xml  control_button_l2.xml  control_button_moon.xml  control_button_options.xml  control_button_pyramid.xml  control_button_r1.xml  control_button_r2.xml  control_button_share.xml  control_button_touchpad.xml  control_button_touchpad_pressed.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/release/java/com/greenlightrn/: ReactNativeFlipper.java
cmake/: OpenSSLExternalProject.cmake
lib/: CMakeLists.txt
lib/include/chiaki/: common.h  feedbacksender.h  orientation.h  session.h  sock.h  streamconnection.h  takion.h  takionsendbuffer.h  videoreceiver.h
lib/src/: common.c  congestioncontrol.c  feedbacksender.c  orientation.c  session.c  streamconnection.c  takion.c  takionsendbuffer.c  videoreceiver.c
lib/src/remote/: holepunch.c
patches/: react-native-gesture-handler+2.16.2.patch
src/: App.tsx  i18n.ts
src/auth/: index.ts
src/common/: controller.ts  index.ts  settings.ts  svg.ts  virtualgp.ts
src/common/settings/: advand.ts  audio.ts  bases.ts  display.ts  gamepad.ts  haptic.ts  local.ts  others.ts  remote.ts  sensor.ts  touchpad.ts
src/components/: ConsoleItem.tsx  CustomVirtualGamepad.tsx  DS5Controller.tsx  GamepadButton.tsx  MapItem.tsx  PerfPanel.tsx  Spinner.tsx  StreamFsrView.tsx  StreamTextureView.tsx  StreamView.tsx  Touchpad.tsx  VirtualGamepad.tsx
src/components/CustomGamepad/: Button.tsx  Dpad.tsx  GamepadButton.tsx
src/components/Joystick/: index.tsx
src/discovery/: index.ts  message.ts
src/hooks/: useWifiPerformanceMode.ts
src/languages/: en.ts  es.ts  zh.ts  zht.ts
src/pages/: About.jsx  ConsoleEdit.tsx  Consoles.tsx  CustomGamepad.jsx  Debug.jsx  DualSense.tsx  DualSenseWeb.jsx  GameMapDetail.jsx  History.jsx  HoldButtons.jsx  Home.jsx  Login.jsx  LoginBase64Id.tsx  LoginUsername.tsx  Logs.tsx  ManualLogin.tsx  NativeGameMap.jsx  Options.jsx  Registry.tsx  Rgb.tsx  SettingDetail.jsx  Settings.jsx  Stream.tsx  Thanks.jsx  Transfer.tsx  Users.tsx  VirtualGamepadSettings.jsx
src/store/: consolesStore.ts  settingStore.ts  tokenStore.ts
src/theme/: index.dark.ts  index.ts
src/types/: index.d.ts
src/utils/: udp.js  updater.ts
src/wakeup/: index.ts
(+2 files in other folders)
